# clapikit

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_cli.py
.clinerules/: 0-index.md  1-basicrules.md  2-python-development.md  3-memory-bank-system.md
.github/workflows/: publish.yaml  pytest.yaml
src/clapikit/: _version.py  cli.py  client.py  parser.py
tests/: conftest.py  test_cli.py  test_client.py  test_parser.py
