[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clapikit"
version = "0.1.0"
description = "CLI tool for OpenAPI specifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
clapikit = "clapikit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src"]

[tools.setuptools.package-dir]
clapikit = "src/clapikit"

[tool.setuptools_scm]
write_to = "src/clapikit/_version.py"
