[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clapikit"
version = "0.1.0"
description = "CLI tool for OpenAPI specifications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
clapikit = "clapikit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["src"]

[tools.setuptools.package-dir]
clapikit = "src/clapikit"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "setuptools>=80.0.0",
    "setuptools-scm>=8.3.1",
]

[tool.setuptools_scm]
write_to = "src/clapikit/_version.py"
